# fastplot

./: .dockerignore  CMakeLists.txt  Dockerfile.rpi  Readme.md  conanfile.py
docs/: emplot.html  emplot.js  emplot.wasm  index.html
include/fastplot/: fastplot.hpp
include/fastplot/gl/: ctx.hpp
include/rtk/: rtk_fwd.hpp
include/rtk/gl/: program.hpp  shader.hpp
src/common/: plot.cpp
src/common/gl/: glplot.cpp
src/emscripten/: CMakeLists.txt  em_ctx.cpp
src/glfw/: CMakeLists.txt  glfw_ctx.cpp
src/rtk/gl/: program.cpp
