add_executable(emplot em_ctx.cpp)
target_link_libraries(emplot PUBLIC fastplot_gl)
target_compile_options(emplot PUBLIC --bind)
set_target_properties(emplot PROPERTIES LINK_FLAGS "-s EXPORT_NAME=fastplot -s MODULARIZE_INSTANCE=1 -s USE_WEBGL2=1 -s OFFSCREEN_FRAMEBUFFER=1 --bind")
set_target_properties(emplot PROPERTIES SUFFIX ".html")